--- a/plantilla-html/templates/contact/index.html.twig
+++ b/plantilla-html/templates/contact/index.html.twig
@@ -35,31 +35,28 @@
     <!-- Start Contact -->
     <div class="container py-5">
         <div class="row py-5">
-            <form class="col-md-9 m-auto" method="post" role="form">
+            {{ form_start(form, {'attr': {'class':'col-md-9 m-auto'}}) }}
+            {{ form_errors(form) }}
                 <div class="row">
                     <div class="form-group col-md-6 mb-3">
-                        <label for="inputname">Name</label>
-                        <input type="text" class="form-control mt-1" id="name" name="name" placeholder="Name">
+                        {{ form_row(form.name, {'attr': {'class':'form-control mt-1'}}) }}
                     </div>
                     <div class="form-group col-md-6 mb-3">
-                        <label for="inputemail">Email</label>
-                        <input type="email" class="form-control mt-1" id="email" name="email" placeholder="Email">
+                        {{ form_row(form.email, {'attr': {'class':'form-control mt-1'}}) }}
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label for="inputsubject">Subject</label>
-                    <input type="text" class="form-control mt-1" id="subject" name="subject" placeholder="Subject">
+                    {{ form_row(form.subject, {'attr': {'class':'form-control mt-1'}}) }}
                 </div>
-                <div class="mb-3">
-                    <label for="inputmessage">Message</label>
-                    <textarea class="form-control mt-1" id="message" name="message" placeholder="Message" rows="8"></textarea>
+                <div class="mb-3">                    
+                    {{ form_row(form.message, {'attr': {'class':'form-control mt-1'}}) }}                    
                 </div>
                 <div class="row">
                     <div class="col text-end mt-2">
-                        <button type="submit" class="btn btn-success btn-lg px-3">Let’s Talk</button>
+                        {{ form_row(form.Send, {'attr': {'class':'btn btn-success btn-lg px-3'}}) }}                        
                     </div>
                 </div>
-            </form>
+            {{ form_end(form) }}
         </div>
     </div>
     <!-- End Contact -->
