--- a/plantilla-html/templates/contact/thankyou.html.twig
+++ b/plantilla-html/templates/contact/thankyou.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Thank You!{% endblock %}
 {% block body %}
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" style="text-align: center;padding: 40px;">
   <div class="container">
     <h1 class="display-4">Thank You!</h1>
     <p class="lead">Thanks for getting in touch with us.</p>
