Acabado gestion de usuarios

--- a/plantilla-html/templates/partials/_navigations.html.twig
+++ b/plantilla-html/templates/partials/_navigations.html.twig
@@ -26,6 +26,19 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path("contact") }}">Contact</a>
                     </li>
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("app_logout") }}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("app_login") }}">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("register") }}">Register</a>
+                        </li>    
+                    {% endif %}                    
+                    
                 </ul>
             </div>
             <div class="navbar align-self-center d-flex">
@@ -42,11 +55,11 @@
                 </a>
                 <a class="nav-icon position-relative text-decoration-none" href="#">
                     <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">7</span>
+                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"></span>
                 </a>
                 <a class="nav-icon position-relative text-decoration-none" href="#">
                     <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
+                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"></span>
                 </a>
             </div>
         </div>
