--- a/plantilla-html/public/assets/css/custom.css
+++ b/plantilla-html/public/assets/css/custom.css
@@ -1,3 +1,14 @@
 /*
 Custom Css
 */
+#perfil{
+    width: 25px;
+    height: 25px;
+    border-radius:160px;
+}
+#perfil2{
+    width:300px;
+    height:300px;
+    border-radius:160px;
+    border:5px solid #666;
+}
