--- a/plantilla-html/templates/partials/_navigations.html.twig
+++ b/plantilla-html/templates/partials/_navigations.html.twig
@@ -57,10 +57,9 @@
                     <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
                     <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"></span>
                 </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
-                    <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"></span>
-                </a>
+                {% if app.user %}
+                    <a href="{{ path("perfil") }}"><img id="perfil" src="{{ asset('images/index/gallery/' ~ app.user.file) }}" alt="fotoperfil" class="img-circle"></img></a>
+                {% endif %}                                
             </div>
         </div>
 
