--- a/plantilla-html/templates/registration/register.html.twig
+++ b/plantilla-html/templates/registration/register.html.twig
@@ -22,6 +22,9 @@
                 <div class="mb-3">                    
                     {{ form_row(registrationForm.plainPassword, {'attr': {'class':'form-control mt-1'}}) }}                    
                 </div>
+                <div class="mb-3">
+                    {{ form_row(registrationForm.file, {'attr': {'class':'form-control mt-1'}}) }}
+                </div>
                 <div class="row">
                     <div class="col text-end mt-2">
                         {{ form_row(registrationForm.Send, {'attr': {'class':'btn btn-success btn-lg px-3'}}) }}                        
