--- a/plantilla-html/templates/security/login.html.twig
+++ b/plantilla-html/templates/security/login.html.twig
@@ -22,17 +22,18 @@
                         <label for="inputname">Email</label>
                         <input type="email" value="{{ last_username }}" class="form-control mt-1" id="email" name="email" placeholder="Email">
                     </div>
-                    <div class="form-group col-md-6 mb-3">
-                        <label for="inputpasswd">Password</label>
-                        <input type="password" class="form-control mt-1" id="password" name="password" placeholder="Password">
-                    </div>
                     <div class="row">
-                        <div class="col text-end mt-2">
+                        <div class="form-group col-md-6 mb-3">
+                            <label for="inputpasswd">Password</label>
+                            <input type="password" class="form-control mt-1" id="password" name="password" placeholder="Password">
+                        </div>
+                    </div>                    
+                    <div class="row">
+                        <div class="col  mt-2">
                             <button class="btn btn-success btn-lg px-3" type="submit">
                                 Sign in
                             </button>
                         </div>
-                        
                     </div>
                 </div>
                 <input type="hidden" name="_csrf_token"
