He puesto foto de perfil predeterminada cuando no ha subido su foto de perfil

--- a/plantilla-html/templates/page/index.html.twig
+++ b/plantilla-html/templates/page/index.html.twig
@@ -85,28 +85,27 @@
     <section class="container py-5">
         <div class="row text-center pt-3">
             <div class="col-lg-6 m-auto">
-                <h1 class="h1">Categories of The Month</h1>
+                <h1 class="h1">Categrias del mes</h1>
                 <p>
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
+                    Estas son las categorias mas vendidas del mes.
                 </p>
             </div>
         </div>
         <div class="row">
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="{{ path("shop-single") }}"><img src="./assets/img/category_img_01.jpg" class="rounded-circle img-fluid border"></a>
-                <h5 class="text-center mt-3 mb-3">Watches</h5>
-                <p class="text-center"><a href="{{ path("shop-single") }}" class="btn btn-success">Go Shop</a></p>
+                <h5 class="text-center mt-3 mb-3">Relojes</h5>
+                <p class="text-center"><a href="{{ path("shop-single") }}" class="btn btn-success">Tienda</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="{{ path("shop-single") }}"><img src="./assets/img/category_img_02.jpg" class="rounded-circle img-fluid border"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Shoes</h2>
-                <p class="text-center"><a href="{{ path("shop-single") }}" class="btn btn-success">Go Shop</a></p>
+                <h2 class="h5 text-center mt-3 mb-3">Zapatillas</h2>
+                <p class="text-center"><a href="{{ path("shop-single") }}" class="btn btn-success">Tienda</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="{{ path("shop-single") }}"><img src="./assets/img/category_img_03.jpg" class="rounded-circle img-fluid border"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Accessories</h2>
-                <p class="text-center"><a href="{{ path("shop-single") }}" class="btn btn-success">Go Shop</a></p>
+                <h2 class="h5 text-center mt-3 mb-3">Accesorios</h2>
+                <p class="text-center"><a href="{{ path("shop-single") }}" class="btn btn-success">Tienda</a></p>
             </div>
         </div>
     </section>
@@ -140,11 +139,11 @@
                                     <i class="text-muted fa fa-star"></i>
                                     <i class="text-muted fa fa-star"></i>
                                 </li>
-                                <li class="text-muted text-right">$240.00</li>
+                                <li class="text-muted text-right">10€</li>
                             </ul>
-                            <a href="{{ path("shop-single") }}" class="h2 text-decoration-none text-dark">Gym Weight</a>
+                            <a href="{{ path("shop-single") }}" class="h2 text-decoration-none text-dark">Linterna</a>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt in culpa qui officia deserunt.
+                                Linterna de bolsillo potente.
                             </p>
                             <p class="text-muted">Reviews (24)</p>
                         </div>
@@ -161,14 +160,14 @@
                                     <i class="text-warning fa fa-star"></i>
                                     <i class="text-warning fa fa-star"></i>
                                     <i class="text-warning fa fa-star"></i>
-                                    <i class="text-muted fa fa-star"></i>
+                                    <i class="text-warning fa fa-star"></i>
                                     <i class="text-muted fa fa-star"></i>
                                 </li>
-                                <li class="text-muted text-right">$480.00</li>
+                                <li class="text-muted text-right">480€</li>
                             </ul>
-                            <a href="{{ path("shop-single") }}" class="h2 text-decoration-none text-dark">Cloud Nike Shoes</a>
+                            <a href="{{ path("shop-single") }}" class="h2 text-decoration-none text-dark">Apple Watch</a>
                             <p class="card-text">
-                                Aenean gravida dignissim finibus. Nullam ipsum diam, posuere vitae pharetra sed, commodo ullamcorper.
+                                Apple Watch Series 6, con correa roja.
                             </p>
                             <p class="text-muted">Reviews (48)</p>
                         </div>
@@ -190,9 +189,9 @@
                                 </li>
                                 <li class="text-muted text-right">$360.00</li>
                             </ul>
-                            <a href="{{ path("shop-single") }}" class="h2 text-decoration-none text-dark">Summer Addides Shoes</a>
+                            <a href="{{ path("shop-single") }}" class="h2 text-decoration-none text-dark">Polaroid</a>
                             <p class="card-text">
-                                Curabitur ac mi sit amet diam luctus porta. Phasellus pulvinar sagittis diam, et scelerisque ipsum lobortis nec.
+                                Cámara fotografica Polaroid.
                             </p>
                             <p class="text-muted">Reviews (74)</p>
                         </div>
